--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
+    <img src="https://i.imgur.com/H1qsYEl.png" alt="logo">
+    <img src="https://images.hdqwalls.com/wallpapers/nature-scenery-4k-s4.jpg" alt="scenery" title="beautiful view">
   </body>
 </html>
